--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -141,7 +141,17 @@ nav img{
     position: relative;
 }
 
-.nav-links ul .menu-sub-item::after{
+.hover::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: var(--alt-contrast-color);
+    display: block;
+    margin: auto;
+    transition: 0.3s; 
+}
+
+.nav-links ul .menu-sub-item .hover::after{
     content: '';
     width: 0%;
     height: 2px;
@@ -218,25 +228,25 @@ nav .fa{
         align-items: center;
     }
 
-    .nav-profile {
+    .nav-language {
         list-style: none;
         display: inline-block;
         padding: 3px 12px;
         position: relative;
     }
 
-    .responsive-profile {
+    .responsive-language {
         display:none;
     }
 }
 
 @media(max-width: 1199px){
 
-    .nav-profile {
+    .nav-language {
         display:none;
     }
 
-    .responsive-profile {
+    .responsive-language {
         list-style: none;
         position: relative;
         display: flex;
@@ -276,21 +286,25 @@ nav .fa{
     }
 }
 
-.nav-profile img {
-    max-width: 100%;
-    height: auto;
+.nav-language img {
+    max-width: 30px;
+    width: 100%;
+    max-height: 30px;
+    margin-top: 5px;
+    object-fit: cover;
+    object-position: 50% 50%;
 }
 
-.nav-profile .profile {
+.nav-language .language-image {
     border-radius: 50%;
     height: 2.5rem;
     width: auto;
     cursor: pointer;
 }
 
-.nav-profile .dropdown {
+.nav-language .dropdown {
     display: none;
-    width:125px;
+    width: 125px;
     height: auto;
     position: absolute;
     top: 100%;
@@ -300,20 +314,20 @@ nav .fa{
     padding: 10px;
     border: 2px solid var(--medium-background-color);
     border-radius: 5%;
-}
-
-.nav-profile:hover .dropdown,
-.nav-profile:focus .dropdown {
-    display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.nav-profile .dropdown .sub-item {
+.show-languages {
+    display: flex;
+
+}
+
+.nav-language .dropdown .sub-item {
     list-style-type: none;
 }
 
-.nav-profile .dropdown a {
+.nav-language .dropdown a {
     display: flex;
     padding:10px;
     text-decoration: none;
@@ -322,7 +336,7 @@ nav .fa{
     flex-direction: row;
 }
 
-.nav-profile .dropdown a:hover {
+.nav-language .dropdown a {
     color: #ccc;
 }
 
