--- a/about/styles.css
+++ b/about/styles.css
@@ -9,7 +9,8 @@
     background-position: center;
     background-size: cover;
     position: relative;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(../resources/_images/porto3.jpg);
+    /*background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(../resources/_images/porto3.jpg);*/
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(../resources/_images/landscape4.jpg);
 }
 
 .about-text-box {
@@ -44,8 +45,15 @@
 .about-us-row-img-col {
     width: 100%;
     margin: auto;
-    border: 1px solid black;
     height: 400px;
+}
+
+.about-us-row-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    border-radius: 2px;
 }
 
 .about-us-row-text-col {
