--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -41,7 +41,8 @@ a {
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(../_images/porto_home.png);
+    /*background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(../_images/porto_home.png);*/
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(../_images/landscape6.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -348,7 +349,7 @@ nav .fa{
 /********************************************* About *********************************************/
 
 .about{
-    width: 75%;
+    width: 85%;
     margin: auto;
     text-align: center;
     padding-top: 100px;
@@ -378,8 +379,6 @@ nav .fa{
 @media (min-width: 1200px) {
     .about-img-col {
         width: 30%;
-        text-align: center;
-        border: 2px solid #0f1316;
     }
 
     .about-text-col {
@@ -399,12 +398,22 @@ nav .fa{
 
 @media (max-width: 1199px) {
     .about-img-col {
-        width: 100%;
-        height: 300px;
-        text-align: center;
-        border: 2px solid #0f1316;
-        
+        width: 85%;
+        margin: auto;
+        height: 400px;
     }
+
+    .about-text-col h1 {
+        padding-top: 10px;
+    }
+}
+
+.about-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    border-radius: 2px;
 }
 
 
@@ -523,13 +532,23 @@ nav .fa{
     background: rgba(0, 0, 0, 0.4)
 }*/
 
-@media(max-width: 700px){
+@media(max-width: 1000px){
     .tours-row{
         flex-direction: column;
     }
 
     .tours-img-col{
         box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+    }
+}
+
+@media(max-width: 1200px) and (min-width: 800px) {
+    .tours {
+        width: 95%;
+    }
+
+    .tours-img-col {
+        flex-basis: 29%;
     }
 }
 
@@ -566,16 +585,46 @@ nav .fa{
 /********************************************* Portugal Wines Club *********************************************/
 
 .pwc {
-    width: 85%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px;
+    width: 100%;
+    margin-block: 100px;
+    padding-block: 100px;
+    padding-left: 100px;
+    height: 400px;
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(../_images/landscape8.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
 
 .pwc-title {
-    margin-top: 16px;
     margin-bottom: 15px;
     text-align: left;
+}
+
+.pwc-content-box {
+    background-color: #fff;
+    width: 35%;
+    height: 100%;
+    display: block;
+    border-radius: 5px;
+}
+
+.pwc-content {
+    padding: 4rem;
+}
+
+.pwc-content-text {
+    margin-block: 2rem;
+}
+
+.pwc-content-button {
+    margin-block: 2rem;
+    color: var(--alt-contrast-color);
+    transition: 0.5s;
+}
+
+.pwc-content-button:hover {
+    color: var(--alt-contrast-color-hover);
 }
 
 /********************************************* Footer *********************************************/
